# stream-controller

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: events.py  main.py
app/camera/: dependencies.py  events.py  model.py  module.py  repository.py  routes.py  schemas.py
app/streams/: dependencies.py  module.py  routes.py  streaming.py  streaming_test.py
