[tool.poetry]
name = "coba-stream"
version = "0.1.0"
description = ""
authors = ["Nizom Sidiq <nizomsidiq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
opencv-python = "^4.5.5"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
